--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "sharp": "0.31.3"
     },
     "devDependencies": {
-        "@types/node": "18.13.0"
+        "@types/express": "4.17.17",
+        "@types/multer": "1.4.7",
+        "@types/node": "18.13.0",
+        "@types/sharp": "0.31.1"
     }
 }
