--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "src/index.js",
     "type": "module",
     "scripts": {
+        "test": "CDN_DIRECTORY=/cdn mocha tests/test.js",
         "start": "CDN_DIRECTORY=./uploads node ."
     },
     "author": "",
@@ -15,9 +16,16 @@
         "sharp": "0.31.3"
     },
     "devDependencies": {
+        "@types/chai": "4.3.4",
         "@types/express": "4.17.17",
+        "@types/mocha": "10.0.1",
         "@types/multer": "1.4.7",
         "@types/node": "18.13.0",
-        "@types/sharp": "0.31.1"
+        "@types/sharp": "0.31.1",
+        "@types/supertest": "2.0.12",
+        "chai": "4.3.7",
+        "mocha": "10.2.0",
+        "mock-fs": "5.2.0",
+        "supertest": "6.3.3"
     }
 }
